--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,9 @@
   "tasks": {
     "dev": "deno run --allow-read --allow-write mod.ts",
     "test": "deno test --allow-read --allow-write",
-    "build:npm": "deno run -A scripts/build_npm.ts"
+    "build:npm": "deno run -A scripts/build_npm.ts",
+    "from-dynamo": "deno run --allow-read --allow-write cli.ts from-dynamo",
+    "to-dynamo": "deno run --allow-read --allow-write cli.ts to-dynamo"
   },
   "fmt": {
     "files": {
