--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,10 @@
 {
+  "name": "dynason",
+  "version": "0.1.0",
   "tasks": {
     "test": "deno test --allow-read --allow-write",
-    "from-dynamo": "deno run --allow-read --allow-write cli.ts from-dynamo",
-    "to-dynamo": "deno run --allow-read --allow-write cli.ts to-dynamo"
+    "build:npm": "deno run -A scripts/build_npm.ts",
+    "dynason": "deno run --allow-read --allow-write cli.ts"
   },
   "fmt": {
     "files": {
