chore: ignore generated JSON files
- Add *.from-dynamo.json and *.to-dynamo.json to .gitignore
- Remove accidentally committed generated files

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@
 # Test directories
 /test-npm-package/
 
+# Generated files
+*.from-dynamo.json
+*.to-dynamo.json
+
 # Environment specific
 .env
 .env.*
