--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,9 @@
   "tasks": {
     "test": "deno test --allow-read --allow-write",
     "build:npm": "deno run -A scripts/build_npm.ts",
-    "dynason": "deno run --allow-read --allow-write cli.ts"
+    "dynason": "deno run --allow-read --allow-write cli.ts",
+    "f": "deno run --allow-read --allow-write cli.ts f",
+    "t": "deno run --allow-read --allow-write cli.ts t"
   },
   "fmt": {
     "files": {
