refactor: improve type safety in all files
- Remove any types from convert.ts
- Add AWS SDK types
- Create shared types module
- Implement safe type casting
- Update imports and type usage

--- a/deno.json
+++ b/deno.json
@@ -21,6 +21,7 @@
     }
   },
   "imports": {
-    "@aws-sdk/util-dynamodb": "npm:@aws-sdk/util-dynamodb"
+    "@aws-sdk/util-dynamodb": "npm:@aws-sdk/util-dynamodb",
+    "@aws-sdk/client-dynamodb": "npm:@aws-sdk/client-dynamodb"
   }
 }
