chore: update test configuration
- Add test include/exclude patterns
- Update to new Deno 2.0 test configuration format
- Exclude npm build and test directories from tests

--- a/deno.json
+++ b/deno.json
@@ -20,6 +20,10 @@
       "proseWrap": "preserve"
     }
   },
+  "test": {
+    "include": ["src/"],
+    "exclude": ["npm/", "test-npm-package/"]
+  },
   "imports": {
     "@aws-sdk/util-dynamodb": "npm:@aws-sdk/util-dynamodb",
     "@aws-sdk/client-dynamodb": "npm:@aws-sdk/client-dynamodb"
